fixed layout shift, improved accessibility score

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 :root {
   font-synthesis: none;
 }
+
+iconify-icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+}
